<resources>
    <string name="app_name">Smart Garden</string>
    <string name="email_address_hint">Enter Your Email Address</string>
    <string name="password_hint">Enter your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered">New User? Sign Up Here</string>
    <string name="password_again">Enter your Password again</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered? Sign In Here</string>
    <string name="forgot_password">forgot password?</string>
    <string name="full_name">Enter Full Name</string>
    <string name="error_user_exists">Account already exists</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_weak_password">Password length must be atleast 6</string>
    <string name="email_not_verfied">Email not verified</string>
    <string name="not_verfied_text">Please verify your Email Address</string>
    <string name="refresh">Refresh</string>
    <string name="signing_text">Signing In</string>
    <string name="please_wait">Please wait</string>
    <string name="signup_please_wait">Please wait while we setup your account</string>
    <string name="account_does_not_exist">Account does not exist</string>
    <string name="password_incorrect">Incorrect Password </string>
    <string name="logout">Logout</string>
    <string name="no_device_text">No Device Found</string>
    <string name="go_to_market">Go to Market</string>
    <string name="plant">Plant</string>
    <string name="buy_now">Buy Now</string>
    <string name="enter_device_name">Device Name</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="water">Water</string>
    <string name="temperature">Temperature</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_closed">drawer_closed</string>
    <string name="device_name_content">Enter Device Name</string>
    <string name="blank" />
    <string name="cancel">Cancel</string>
    <string name="Mode">Device Mode</string>
    <string name="automatic_mode">Device in auto mode change mode to change switch manually</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="password_reset_sent">Password Reset Email has been successfully sent</string>
    <string name="user_not_registered">Email Address not registered</string>
    <string name="iAgree">I Agree</string>
    <string name="iDisagree">I Disagree</string>
    <string name="passwords_wont_match">Passwords wont match</string>
    <string name="disclaimer">I agree that the products shown in the marketplace of Smart Garden android application are sample items and the payment paid in any form is not paid for the shown devices. I will not claim any product that was bought on the Smart Garden Application in any mode of payment and I will not demand a refund of money for the same.</string>
    <string name="compulsory_field">This field is compulsory</string>
    <string name="disclaimerTitle">Disclaimer</string>
    <string name="analyze">Analyze</string>
    <string name="uploading">Uploading</string>
</resources>
